# GoogleTestFramwork_StaticLib

./: CMakeLists.txt  README.md  add.cpp  add_app.cpp  conanfile.txt  test.cpp
